crates/dag-macros/tests/ui/workflow_switch_duplicate_source.stderr
error: [DAG207] duplicate switch! for source `route`
  --> tests/ui/workflow_switch_duplicate_source.rs:40:5
   |
40 |     switch!(
   |     ^^^^^^
